Fixed a layout bug in the three-pane-html display mode.

--- a/src/wte/static/scss/application/_foundation-overrides.scss
+++ b/src/wte/static/scss/application/_foundation-overrides.scss
@@ -33,3 +33,8 @@ h1 .label, h2 .label, h3 .label, h4 .label, h5 .label, h6 .label {
 .button.inline {
     margin-bottom: 0;
 }
+nav {
+    ul.breadcrumbs {
+        margin-bottom: 0;
+    }
+}
